--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -35,8 +35,6 @@
     align-items: center;
     justify-content: space-around;
     /* border: 1px solid white; */
-
-
 }
 
 .nav ul li{
@@ -95,6 +93,8 @@
     /* border: 1px solid black; */
     width: max-content;
     box-shadow: rgba(2,13,33, 0.3) 0px 19px 38px, rgba(2,13,33, 0.22) 0px 15px 12px;
+    /* border-right: 1px solid rgba(255, 255, 255, 1);
+    border-left: 1px solid rgba(255, 255, 255, 1); */
 
 
 }
